# image_evolution

./: CMakeLists.txt
src/: AdaptiveScalingController.cpp  AdaptiveScalingController.h  CMakeLists.txt  Color.h  EvolutionDriver.cpp  EvolutionDriver.h  EvolutionStatistics.cpp  EvolutionStatistics.h  Image.cpp  Image.h  ImageEvolver.cpp  ImageEvolver.h  ImageSse.cpp  MainWindow.h  MipmapCollection.cpp  MipmapCollection.h  MipmapSettings.h  Mutator.cpp  Mutator.h  Point.h  Population.cpp  Population.h  State.cpp  State.h  main.cpp
src/gui/: GuiBridge.cpp  GuiBridge.h  InitialSettings.h  InitialSettingsDialog.cpp  InitialSettingsDialog.h  MainWindow.cpp  MainWindow.h  MipmapDialog.cpp  MipmapDialog.h  MutateDialog.cpp  MutateDialog.h  ui_initial_settings.h  ui_mainwindow.h  ui_mipmap_dialog.h  ui_mutation_options.h
